- Implemented STTable and STTableHeader which now act as the main table and headers of the project. - Implemented sorting (but not by click yet). - Added a bunch of .jar files which may or may not be used (lol)

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 *.idea/*
 /src/main/java/META-INF/MANIFEST.MF
 /target/SupportTracker-0.0.1-shaded.pom
+/target/classes/META-INF/SupporterTrackingHub.kotlin_module
